# c_engine

./: CMakeLists.txt  README.md  build.ninja  cmake_install.cmake  frag.glsl  imgui.ini  main.c  vert.glsl
assets/: pig.dae  pig.fbx  pig.obj.fbx  tube.fbx
components/: camera.c  camera.h  model.c  model.h  world.c  world.h
systems/: key_event.c  key_event.h  render_device.c  render_device.h  scene.c  scene.h  window.c  window.h
utils/: mesh_loader.c  mesh_loader.h  renderer.c  renderer.h  temp_globals.h
